Fix height for rounds dropdown and make the scrollbar transparent

--- a/frontends/web/src/containers/App.css
+++ b/frontends/web/src/containers/App.css
@@ -358,6 +358,27 @@ table.inspectModel thead td {
     margin-right: 5px;
 }
 
+.hide-scroll-bar {
+    --scrollbar-color-track: rgba(255, 255, 255, 0);
+    --scrollbar-color-thumb: rgb(255, 255, 255);
+}
+
+@supports (scrollbar-width: auto) {
+    .hide-scroll-bar {
+      scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+    }
+}
+
+.hide-scroll-bar::-webkit-scrollbar {
+    width: 12px;
+    background-color: var(--scrollbar-color-thumb);
+}
+
+.hide-scroll-bar::-webkit-scrollbar-track {
+    background-color: var(--scrollbar-color-track);
+    width: 12px;
+}
+
 @media all and (min-width: 480px) {
     .text-nav-bar {
         display: none;
